# task_1

./: README.md  main.py  pyproject.toml  Задача.txt
scr/area_figures/: __init__.py  main.py
scr/area_figures.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_area_figures.py
